# HPE-iLO-automation

./: .gitignore  CONTRIBUTING.md  HPE_set_bios.py  HPEilodetials.py  PACKAGING.md  README.md  ips.txt.example  pyproject.toml  requirements.txt
bios_profiles/: Nutanix_DL360G11_Intel.txt  Nutanix_DL385G11_AMD.txt  Nutanix_Gen10Plus_DX220n_Intel.txt  Nutanix_Gen10Plus_DX360_10SFF_Intel.txt  Nutanix_Gen10Plus_DX360_10SFF_VMD_Intel.txt  Nutanix_Gen10Plus_DX380_12LFF_Intel.txt  Nutanix_Gen10Plus_DX380_24SFF_Intel.txt  Nutanix_Gen10Plus_DX385_12_AMD.txt  Nutanix_Gen10_Intel.txt  Nutanix_Gen11_DX360_8SFF_VMD_Intel.txt
hpe_set_bios/: __init__.py  __main__.py  cli.py
hpe_set_bios/bios_profiles/: Nutanix_DL360G11_Intel.txt  Nutanix_DL385G11_AMD.txt  Nutanix_Gen10Plus_DX325_8SFF_Intel.txt  Nutanix_Gen10Plus_DX360_8SFF_Intel.txt  Nutanix_Gen10Plus_DX360_8SFF_VMD_Intel.txt  Nutanix_Gen10Plus_DX380_8SFF_Intel.txt  Nutanix_Gen10Plus_DX385_24SFF_AMD.txt  Nutanix_Gen10Plus_EL8000_Intel.txt  Nutanix_Gen11_DX360_10SFF_VMD_Intel.txt  Nutanix_Gen11_DX365_10SFF_VMD_AMD.txt  Nutanix_Gen12_Intel.txt
